# Live-Chat-Room

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml  checks_and_deployment.yml
app/: logger.py  main.py  schemas.py  settings.py  utils.py
app/static/: chat.js
app/templates/: index.html
flask_sockets/static/: chat.js
proxy/: Dockerfile  default.conf.tpl  run.sh
src/app/: logger.py  main.py  schemas.py  settings.py
src/app/static/: chat.js  index.js  styles.css
src/app/templates/: index.html
src/tests/: conftest.py  test_main.py
