[project]
name = "live-chat-room"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "gevent>=25.5.1",
]

[dependency-groups]
test = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-playwright>=0.7.1",
    "ruff>=0.12.8",
    "types-flask-socketio>=5.5.0.20250809",
]

[tool.ruff]
target-version = "py312"
lint.extend-select = ["ALL"]
lint.ignore = ["D100", "D104", "INP001"]
exclude = [".venv/"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [".venv/"]
files = "src/"

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["D103", "S101"]

[tool.pytest.ini_options]
addopts = """
  --verbose
  --maxfail=1
"""
markers = """
  e2e: marker for end-to-end tests
"""
